CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Torch REQUIRED)

INCLUDE_DIRECTORIES(${Torch_INSTALL_INCLUDE} ${OpenCV_INCLUDE_DIRS})

ADD_LIBRARY(filters SHARED src/filters.cpp)
TARGET_LINK_LIBRARIES(filters TH ${OpenCV_LIBS})

ADD_LIBRARY(conversion SHARED src/tensor_mat_conversion.cpp)
TARGET_LINK_LIBRARIES(conversion TH ${OpenCV_LIBS})
